Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86846

the password box not refreshed under Chinese input method

    XMLWordPrintable

Details

    • Linux/Wayland, Linux/X11
    • d5e8efd8cb02876dc314da0579d33af39ba38495 (qt/qtbase/dev) f2fd3807c32e5f1f4921e0324f2e584c912d0ad6 (qt/qtbase/6.2) 12ef53e0d311e830542bdec456f59c52dafe2afb (qt/qtbase/6.1) a37336cd2b18076b0dc1c51e1d69fbb370d330ac (qt/tqtc-qtbase/5.15)

    Description

      Use the Chinese input method, click the normal text box with the mouse, enter Chinese, and then click the password box (or set the Qt::ImhHiddenText property) to continue typing, and an error occurred. As shown in GIF.

       

      Whether the input method inputs Chinese, you need to call the QXXXPlatformInputContext::update function, and call the setCapability function according to Qt::ImhHiddenText. But when using the mouse to switch between the normal text box of lineedit and the password text box (with Qt::ImhHiddenText property). If this function is not called, the internal state of the input method is not updated, so the input method needs to be updated when focusInEvent. 

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            tanghaixiang haixiang tang
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes